[package]
name = "stevedore_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.18"
reqwest = { version = "0.11.23", features = ["stream"] }
tokio = { version = "1.35.1", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
tonic = "0.10.2"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.10.2"
